<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/Header"
        android:text="@string/tab1"
        android:id="@+id/result"/>

    <Button
        style="@style/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pass_coin"
        android:onClick="CoinRandom" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resAnim"
            android:id="@+id/enableAnim"
            android:checked="true"
            android:textSize="25sp"
            android:layout_gravity="center"/>


        <RadioGroup android:id="@+id/randType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <RadioButton style="randTypeRadio"
                android:text="орёл и решка"
                android:tag="true"
                android:id="@+id/randTypeR1"
                android:onClick="SwitchRandTypeRes"
                tools:ignore="HardcodedText" />

            <RadioButton style="randTypeRadio"
                android:text="да и нет"
                android:tag="false"
                android:onClick="SwitchRandTypeRes"
                tools:ignore="HardcodedText" />
        </RadioGroup>
</LinearLayout>