<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/Header"
        android:text="@string/tab2"
        android:id="@+id/result"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/min"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/min"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:hint="0"
        android:text="0"
        android:inputType="number"
        tools:ignore="Autofill,HardcodedText"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvmax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/max"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/max"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:hint="999 999 999"
        android:text="100"
        android:inputType="numberDecimal"
        tools:ignore="Autofill,DuplicateIds,HardcodedText"
        app:layout_constraintTop_toBottomOf="@id/min"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/generate"
        style="@style/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/max"
        android:onClick="NumberRandom" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/generate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/resAnim"
        android:id="@+id/enableAnim"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:textSize="25sp"
        android:layout_gravity="center" />
</androidx.constraintlayout.widget.ConstraintLayout>